# perl5-wheel

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  version.yml
scripts/: update-version.pl
